# internal/db/models/post.go
@@ -119,12 +119,12 @@ func (db *PostDB) GetBySlug(ctx context.Context, slug string) (*Post, error) {
 }
 
 // FindAll returns all the posts with pagination, sorted by the created time.
-// Selects only the necessary fields to reduce the payload - slug, title, description, keywords, created_at.
+// Selects only the necessary fields to reduce the payload - slug, title, description, keywords, created_at, sent_to_subscribers_at.
 func (db *PostDB) FindAll(ctx context.Context, page, perPage int) ([]*Post, error) {
 	var posts []*Post
 	err := db.conn.
 		WithContext(ctx).
-		Select("slug, title, description, keywords, reading_time, created_at").
+		Select("slug, title, description, keywords, reading_time, created_at, sent_to_subscribers_at").
 		Offset((page - 1) * perPage).
 		Limit(perPage).
 		Order("created_at desc").
